Updated on 22nd April 2019

--- a/contact-me.html
+++ b/contact-me.html
@@ -5,13 +5,13 @@
     <title>Contact Me</title>
   </head>
   <body>
-    <h3>My Contact Details</h3>
-    <p>My Address: 2051 Wardan Ave, Scarborough, Ontario, Canada</p>
-    <p>My Email: abcd@abcd.com</p>
-    <p>My Phone: (321) 321-321</p>
+    <h3>Contact Details</h3>
+    <p>Address: Scarborough, Ontario, Canada</p>
+    <p>GitHub Project: <a href="https://github.com/iamnhshovon/resume">Resume</a></p>
+    <p>Email: corporate.nhs@outlook.com</p>
     <hr>
     <h3>Contact Me</h3>
-    <form action=mailto:sonet.diu@gmail.com?subject=Contact method="post" enctype="text/plain">
+    <form action=mailto:corporate.nhs@outlook.com?subject=Feedback method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br>
       <label>Your Email:</label>
