--- a/index.html
+++ b/index.html
@@ -11,45 +11,41 @@
     <th>
       <td><img src="https://media.licdn.com/dms/image/C5603AQFv8aKmdI-EMQ/profile-displayphoto-shrink_200_200/0?e=1561593600&v=beta&t=C-ixyumKi4Jeg4RzvcSM8U9WqLwh2NcGIP1koqPbKcY" alt="Nazmul's profile picture"></td>
       <td><h1>Md Nazmul Hassan Shovon</h1>
-      <p><em>Professional <strong>Web Developer</strong> and <strong>Cloud Engineer</strong></em></p>
-      <p>I <font color=red>🎔</font> to hang around with family and friends. Passonate about cars.</p></td>
+        <p><em>Passonate <strong>Web Developer</strong> and <strong>Support Engineer</strong></em></p>
+        <p>“I'm not a great programmer, I'm just a good programmer with great habits...”</p>
+      </td>
     </th>
   </table>
-  <hr />
-  <h3>About Me!</h3>
+  <hr>
+  <h3>SUMMARY OF QUALIFICATIONS</h3>
   <ul>
     <li>Over 10 years of cumulative working experience in the IT and telecommunication sector as ITSM professional and application support specialist</li>
-    <li>Comprehensive knowledge on AWS Cloud technologies</li>
+    <li>PRINCE2 certified project management professional with project delivery and rollout experience</li>
+    <li>ITIL certified practitioner with excellent understanding on ITIL best practices</li>
     <li>As a problem solver, able to communicate with customers at all levels of technical proficiency</li>
     <li>Accomplished customer satisfaction by ensuring support within agreed SLA</li>
-    <li>Detailed infomration can be found in my <a href="http://www.linkedin.com/in/nhshovon">LinkedIn</a> profile</li>
+    <li>Comprehensive knowledge on HTML, CSS, PHP, Java Script and Amazon cloud technologies</li>
   </ul>
-  <h3>Hobbies</h3>
-  <ol>
-    <li>Driving</li>
-    <li>Watching movies</li>
-    <li>Social networking</li>
-  </ol>
-  <hr />
-  <h3>Work Experience</h3>
+  <hr>
+  <h3>EMPLOYMENT HISTORY</h3>
   <table>
     <thead align=left>
       <tr>
-        <th>Date</th>
+        <th>Date and Organization</th>
         <th></th>
-        <th>Work</th>
+        <th>Position</th>
       </tr>
     </thead>
     <tbody align=left>
       <tr>
-        <td>2018 - 2019: HGS Canada Inc</td>
+        <td>2017 - 2018: Wipro Limited</td>
         <td></td>
-        <td>Customer Relations Associate</td>
+        <td>Software Engineer</td>
       </tr>
       <tr>
-        <td>2014 - 2017: Accenture Bngladesh</td>
+        <td>2014 - 2017: Accenture</td>
         <td></td>
-        <td>Software Engineering Senior Analyst</td>
+        <td>Software Engineering Analyst</td>
       </tr>
       <tr>
         <td>2010 - 2013: GPIT Limited</td>
@@ -63,25 +59,65 @@
       </tr>
     </tbody>
   </table>
-  <hr />
-  <h3>Skills</h3>
+  <hr>
+  <h3>TECHNICAL SKILLS</h3>
   <table>
     <tr>
       <td>PHP</td>
-      <td>⭐⭐⭐⭐⭐</td>
       <td></td>
-      <td>CSS</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>HTML</td>
       <td>⭐⭐⭐⭐⭐</td>
       <td></td>
       <td>Java Script</td>
+      <td></td>
       <td>⭐⭐⭐⭐</td>
+      <td></td>
+      <td>Microsoft Office 365</td>
+      <td></td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>HTML</td>
+      <td></td>
+      <td>⭐⭐⭐⭐⭐</td>
+      <td></td>
+      <td>MySQL</td>
+      <td></td>
+      <td>⭐⭐⭐⭐</td>
+      <td></td>
+      <td>Microsoft Sharepoint</td>
+      <td></td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>CSS</td>
+      <td></td>
+      <td>⭐⭐⭐⭐⭐</td>
+      <td></td>
+      <td>Oracle</td>
+      <td></td>
+      <td>⭐⭐⭐⭐</td>
+      <td></td>
+      <td>AWS</td>
+      <td></td>
+      <td>⭐⭐⭐</td>
     </tr>
   </table>
-  <hr />
+  <hr>
+  <h3>PROFESSIONAL CERTIFICATIONS</h3>
+  <ul>
+    <li>CompTIA A+</li>
+    <li>Microsoft Certified Solutions Associate: Office 365</li>
+    <li>Microsoft Certified Solutions Associate: Windows Server 2016</li>
+    <li>ITIL Practitioner Certificate in IT Service Management</li>
+    <li>PRINCE2 Foundation Certificate in Project Management </li>
+  </ul>
+  <hr>
+  <h3>HOBBIES</h3>
+  <ol>
+    <li>Watching Movies</li>
+    <li>Travelling</li>
+    <li>Social Networking</li>
+  </ol>
   <p><a href="contact-me.html">Contact Me</a></p>
 </body>
 
