--- a/contact-me.html
+++ b/contact-me.html
@@ -7,7 +7,7 @@
   <body>
     <h3>Contact Details</h3>
     <p>Address: Scarborough, Ontario, Canada</p>
-    <p>GitHub Project: <a href="https://github.com/iamnhshovon/resume">Resume</a></p>
+    <p>GitHub Project: <a href="https://iamnhshovon.github.io/resume/">Resume</a></p>
     <p>Email: corporate.nhs@outlook.com</p>
     <hr>
     <h3>Contact Me</h3>
